i18n/ja/docusaurus-plugin-content-docs/version-21/Concepts/dt_date.md
---
id: date
title: Date
---

日付フィールド、変数、式として認識できる範囲は、100/1/1 から 32,767/12/31 までです。

C_DATE によって宣言された日付は 32767年までの範囲に対応していますが、システムを経由する処理によっては上限にさらなる制限が課せられます。

**注:** 4D ランゲージリファレンスでは、コマンド説明における日付引数はとくに明記されていない限り、「日付」と表記されています。

## 日付リテラル

日付リテラル定数は、エクスクラメーションマークで囲んで表します (! ... !)。 日付は ISOフォーマット (!YYYY-MM-DD!) 下記に、日付定数の例を示します:

```4d
!1976-01-01!
!2004-09-29!
!2015-12-31!
```

空の日付は、 *!00-00-00!* のように指定します。

**Tip:** コードエディターでは空の日付を入力するためのショートカットが提供されています。 空の日付を入力するには、エクスクラメーションマーク (!) 空の日付を入力するには、エクスクラメーションマーク (!)  の入力後に Enterキーを押します。

**注:**

- 互換性の理由から、4D はシステムフォーマットに準じた二桁の年次の入力を受け付けます (例: !98/04/20!)。 数字が 30以上の場合は 20世紀 (1900年代)、30未満の場合は 21世紀 (2000年代) であると認識します (ただしデフォルト設定が `SET DEFAULT CENTURY` コマンドを使用して変更されていない場合に限ります)。 数字が 30以上の場合は 20世紀 (1900年代)、30未満の場合は 21世紀 (2000年代) であると認識します (ただしデフォルト設定が `SET DEFAULT CENTURY` コマンドを使用して変更されていない場合に限ります)。
- "地域特有のシステム設定を使う" オプション (<a href="https://doc.4d.com/4Dv18/4D/18/Methods-Page.300-4575690.ja.html">メソッドページ</a> 参照) にチェックがされている場合、システムで定義されている日付フォーマットを使用する必要があります。 一般的に、US環境においては、日付は月/日/年の形式で入力され、値はスラッシュ "/" で区切られます。

## 日付演算子

| 演算    | シンタックス                                | 戻り値     | 式                           | 値            |
| ----- | ------------------------------------- | ------- | --------------------------- | ------------ |
| 日付の差  | Date – Date                           | Number  | !2017-01-20! - !2017-01-01! | 19           |
| 日付の加算 | Date + Number                         | Date    | !2017-01-20! + 9            | !2017-01-29! |
| 日付の減算 | Date – Number                         | Date    | !2017-01-20! !2017-01-20!   | !2017-01-11! |
| 等しい   | Date = Date                           | Boolean | !2017-01-20! = !2017-01-01! | true         |
|       |                                       |         | !2017-01-20! !2017-01-20!   | false        |
| 異なる   | Date # Date                           | Boolean | !2017-01-20! !2017-01-20!   | true         |
|       |                                       |         | !2017-01-20! !2017-01-20!   | false        |
| 大きい   | Date > Date                           | Boolean | !2017-01-20! !2017-01-20!   | true         |
|       |                                       |         | !2017-01-20! !2017-01-20!   | false        |
| 小さい   | Date < Date  | Boolean | !2017-01-20! !2017-01-20!   | true         |
|       |                                       |         | !2017-01-20! !2017-01-20!   | false        |
| 以上    | Date >= Date                          | Boolean | !2017-01-20! !2017-01-20!   | true         |
|       |                                       |         | !2017-01-01!>=!2017-01-20!  | false        |
| 以上    | Date <= Date | Boolean | !2017-01-20! !2017-01-20!   | true         |
|       |                                       |         | !2017-01-20! !2017-01-20!   | false        |

## JavaScriptからの日付の変換

JavaScript 内での日付はオブジェクトであるため、他のオブジェクト同様、4D に対して日付のJSON 形式を格納したテキストとして送信されます。 この原則は、特に[JSON コマンド](../commands/theme/JSON.md) あるいは [Web エリア](../FormObjects/webArea_overview.md) を使用した場合に実装されます。

JavaScript 日付オブジェクトのJSON 形式は、ISO 8601 標準に準拠しています。例: "2013-08-23T00:00:00Z"。 このテキストを4D 日付に変換するのはデベロッパーの責任です。 これには2つの解決策が利用可能です: このテキストを4D 日付に変換するのはデベロッパーの責任です。 これには2つの解決策が利用可能です:

[`JSON Parse`](../commands-legacy/json-parse.md) コマンドを使用する:

```4d
 var $dateIso : Text // ISO フォーマットの日付を受け取る
 var $date4D : Date 
 $date4D:=JSON Parse("\""+$dateIso+"\"";Is date))
```

[`Date`](../commands-legacy/date.md) コマンドを使用する:

```4d
 var $dateIso : Text // ISO フォーマットの日付を受け取る
 var $date4D : Date 
 $date4D:=Date($dateIso)
```

これら2つの解決策の違いに注意してください: [`JSON Parse`](../commands-legacy/json-parse.md) は[`SET DATABASE PARAMETER` を使用して設定された変換モード](../commands-legacy/set-database-parameter.md#dates-inside-objects-85) に準拠する(あれば)一方で、[`Date`](../commands-legacy/date.md) コマンドはこれの影響を受けません。 [`Date`](../commands-legacy/date.md) コマンドを使用した変換は常にローカルのタイムゾーンを考慮します。

:::note

カレントの日付保存設定が[`date type`](../commands-legacy/set-database-parameter.md#dates-inside-objects-85) (デフォルト)だった場合、"YYYY-MM-DD" フォーマットのJSON 日付文字列は[`JSON Parse`](../commands-legacy/json-parse.md) および [`Date`](../commands-legacy/date.md) コマンドの両方において自動的に日付値として管理されます。

:::